# OpenAICPP

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml
assets/json/: fine_tune_data.jsonl  fine_tune_events.json
examples/: example_chat.cpp  example_image.cpp  examples.cpp
include/lib/: httplib.hpp
include/openai/: api_utils.hpp  chat.hpp  enums.hpp  openai.hpp
include/openai/models/: audio.hpp  chat.hpp  commons.hpp  completions.hpp  edits.hpp  embedding.hpp  files.hpp  fine_tune.hpp  fine_tune_events.hpp  image_generation.hpp  models.hpp  moderations.hpp
